<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textColor="@color/black"
    tools:context="com.example.dafpaf.consultadaf.MainActivity"
    tools:ignore="RtlSymmetry" >

    <TextView
    android:id="@+id/textoSelecionarComando"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:text="@string/selecionar_comando" />

    <Button
        android:id="@+id/botaoExecutar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:background="@drawable/bordas_botao"
        android:textColor="@color/black"
        android:layout_below="@id/textoSelecionarComando"
        android:text="@string/executar" />

    <Spinner
        android:id="@+id/spinnerComandos"
        android:layout_width="158dp"
        android:layout_height="46dp"
        android:layout_below="@id/textoSelecionarComando"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/botaoExecutar"
        android:background="@drawable/bordas_depuracao"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/spinnerComandos">
    <TextView
        android:id="@+id/textViewTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/msg_env_daf" />

        <TextView
            android:id="@+id/textEntrada"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/bordas_depuracao"
            android:fontFamily="monospace"
            android:gravity="top"
            android:hint="@string/aguardando_um_comando_ser_selecionado"
            android:maxLength="2000"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:textSize="12sp" />

    <TextView
        android:id="@+id/textViewTitleAck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/recep_o_do_ack" />

    <TextView
        android:id="@+id/textRespostaAck"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:hint="@string/aguardando_um_comando_ser_executado"
        android:fontFamily="monospace"
        android:textSize="12sp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        android:maxLength="2000"
        android:background="@drawable/bordas_depuracao" />

    <TextView
        android:id="@+id/textViewTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/resp_daf" />

    <TextView
        android:id="@+id/textResposta"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:hint="@string/aguardando_um_comando_ser_executado"
        android:fontFamily="monospace"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/bordas_depuracao" />

    <TextView
        android:id="@+id/textViewTitleAck2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/envio_do_ack" />

    <TextView
        android:id="@+id/textRespostaAck2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:hint="@string/aguardando_um_comando_ser_executado"
        android:fontFamily="monospace"
        android:textSize="12sp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:paddingTop="10dp"
        android:maxLength="2000"
        android:background="@drawable/bordas_depuracao" />

    </LinearLayout>

</RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>