<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.dafpaf.consultadaf.MainActivity">

        <TextView
            android:id="@+id/textoSelecionarOpcao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/selecionar_opcao" />

        <Button
            android:id="@+id/btnConsultarInformacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:textColor="@color/black"
            android:drawableStart="@drawable/info_icon"
            android:background="@drawable/bordas_botao"
            android:layout_below="@id/textoSelecionarOpcao"
            android:text="@string/consultar_informa_es"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnAutRetidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:textColor="@color/black"
            android:drawableStart="@drawable/document_icon"
            android:background="@drawable/bordas_botao"
            android:layout_below="@id/btnConsultarInformacoes"
            android:text="@string/autoriza_es_retidas"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnDepuracao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:drawableStart="@drawable/bug_icon"
            android:textColor="@color/black"
            android:background="@drawable/bordas_botao"
            android:layout_below="@id/btnAutRetidas"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:text="@string/depura_o" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>