<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.dafpaf.consultadaf.MainActivity"
        android:background="#68AAAAAA">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:text="@string/informa_es"
            />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/titulo"
            android:background="@color/white"
            tools:ignore="RtlSymmetry"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                >

                <TextView
                    android:id="@+id/nameDaf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/identificador_nico_do_daf"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:id="@+id/textDaf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/nameMop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingStart="10dp"
                    android:text="@string/modo_de_opera_o" />
                <TextView
                    android:id="@+id/textMop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/vsb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/vers_o_do_software_b_sico" />
                <TextView
                    android:id="@+id/textvsb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/hsb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/resumo_criptogr_fico_do_software_b_sico" />
                <TextView
                    android:id="@+id/texthsb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/fabricante" />
                <TextView
                    android:id="@+id/textfab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/mdl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/modelo_do_daf" />
                <TextView
                    android:id="@+id/textMdl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/cnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/contador_monot_nico" />
                <TextView
                    android:id="@+id/textcnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/crt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/certificado_digital_da_sef" />
                <TextView
                    android:id="@+id/textCrt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/est"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/estado_atual_do_daf" />
                <TextView
                    android:id="@+id/textEst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/mxd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/limite_m_ximo_de_autoriza_es" />
                <TextView
                    android:id="@+id/textMxd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/ndf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/n_mero_de_autoriza_es_retidas" />
                <TextView
                    android:id="@+id/textNdf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/rtd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/identificadores_nicos_das_autoriza_es" />
                <TextView
                    android:id="@+id/textRts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/bordas" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
            </LinearLayout>

        </ScrollView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>